Chrome zoom z-index bugfix

--- a/app/assets/sass/_layout.scss
+++ b/app/assets/sass/_layout.scss
@@ -92,6 +92,16 @@ body {
             text-align: center;
 
             @include perspective(1200px);
+
+            &.zoom{
+                position: relative;
+                z-index: 100;
+
+                img{
+                    @include transform(scale(1.5,1.5));
+                    @include transform-origin(100%, 50%, 0);
+                }
+            }
         }
 
         img{
@@ -107,18 +117,12 @@ body {
                 @include transform(rotate3d(1, 0, 0, 0deg));
             }
 
-            &.zoom{
-                @include transform(scale(1.5,1.5));
-                @include transform-origin(100%, 50%, 0);
-
-                z-index: 100;
-            }
         }
 
         &:first-child{
             width: 55%;
 
-            img.zoom{
+            .zoom img{
                 @include transform-origin(0%, 50%, 0);
             }
         }
